--- a/app/src/main/res/layout/fragment_navigation_other.xml
+++ b/app/src/main/res/layout/fragment_navigation_other.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/scrollView5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="80dp"
@@ -120,13 +121,13 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
-                app:cardBackgroundColor="#324056"
+                app:cardBackgroundColor="@color/bluedark"
                 app:cardCornerRadius="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -138,19 +139,18 @@
                     tools:layout_editor_absoluteY="63dp">
 
                     <android.support.v7.widget.CardView
-                        android:id="@+id/cardViewButton2"
+                        android:id="@+id/cardViewButton7"
                         android:layout_width="70dp"
                         android:layout_height="95dp"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginLeft="32dp"
-                        android:onClick="openAospEx"
+                        android:layout_marginEnd="32dp"
+                        android:layout_marginRight="32dp"
+                        android:onClick="openInvertedInferno"
                         android:visibility="visible"
                         app:cardBackgroundColor="@android:color/transparent"
                         app:cardCornerRadius="12dp"
                         app:cardElevation="0dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/cardViewButton5"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/cardViewButton6"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <android.support.constraint.ConstraintLayout
@@ -158,7 +158,7 @@
                             android:layout_height="match_parent">
 
                             <ImageView
-                                android:id="@+id/imageView8"
+                                android:id="@+id/imageView13"
                                 android:layout_width="0dp"
                                 android:layout_height="0dp"
                                 android:layout_marginStart="2dp"
@@ -167,14 +167,14 @@
                                 android:layout_marginEnd="2dp"
                                 android:layout_marginRight="2dp"
                                 android:scaleType="fitCenter"
-                                app:layout_constraintBottom_toTopOf="@+id/textView4"
+                                app:layout_constraintBottom_toTopOf="@+id/textView9"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/ic_square_aospex" />
+                                app:srcCompat="@drawable/ic_square_inverted_inferno" />
 
                             <TextView
-                                android:id="@+id/textView4"
+                                android:id="@+id/textView9"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="2dp"
@@ -182,12 +182,66 @@
                                 android:layout_marginBottom="8dp"
                                 android:fontFamily="@font/timeburnernormal"
                                 android:gravity="center"
-                                android:text="AOSPEx."
-                                android:textColor="@color/aospextended"
+                                android:text="Inv. Inferno"
+                                android:textColor="@color/invInferno"
                                 app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="@+id/imageView8"
-                                app:layout_constraintStart_toStartOf="@+id/imageView8"
-                                app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+                                app:layout_constraintEnd_toEndOf="@+id/imageView13"
+                                app:layout_constraintStart_toStartOf="@+id/imageView13"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView13" />
+                        </android.support.constraint.ConstraintLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardViewButton6"
+                        android:layout_width="70dp"
+                        android:layout_height="95dp"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
+                        android:onClick="openInverted"
+                        android:visibility="visible"
+                        app:cardBackgroundColor="@android:color/transparent"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="0dp"
+                        app:layout_constraintEnd_toStartOf="@+id/cardViewButton7"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <ImageView
+                                android:id="@+id/imageView12"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginLeft="2dp"
+                                android:layout_marginTop="2dp"
+                                android:layout_marginEnd="2dp"
+                                android:layout_marginRight="2dp"
+                                android:scaleType="fitCenter"
+                                app:layout_constraintBottom_toTopOf="@+id/textView8"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/ic_square_inverted" />
+
+                            <TextView
+                                android:id="@+id/textView8"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginLeft="2dp"
+                                android:layout_marginBottom="8dp"
+                                android:fontFamily="@font/timeburnernormal"
+                                android:gravity="center"
+                                android:text="Inverted"
+                                android:textColor="#fff"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/imageView12"
+                                app:layout_constraintStart_toStartOf="@+id/imageView12"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView12" />
                         </android.support.constraint.ConstraintLayout>
 
                     </android.support.v7.widget.CardView>
@@ -206,7 +260,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/cardViewButton2"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0">
 
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
@@ -243,6 +298,60 @@
                                 app:layout_constraintEnd_toEndOf="@+id/imageView11"
                                 app:layout_constraintStart_toStartOf="@+id/imageView11"
                                 app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+                        </android.support.constraint.ConstraintLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cardViewButton2"
+                        android:layout_width="70dp"
+                        android:layout_height="95dp"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginLeft="32dp"
+                        android:onClick="openAospEx"
+                        android:visibility="visible"
+                        app:cardBackgroundColor="@android:color/transparent"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/cardViewButton5"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                        <android.support.constraint.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <ImageView
+                                android:id="@+id/imageView8"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginLeft="2dp"
+                                android:layout_marginTop="2dp"
+                                android:layout_marginEnd="2dp"
+                                android:layout_marginRight="2dp"
+                                android:scaleType="fitCenter"
+                                app:layout_constraintBottom_toTopOf="@+id/textView4"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:srcCompat="@drawable/ic_square_aospex" />
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginLeft="2dp"
+                                android:layout_marginBottom="8dp"
+                                android:fontFamily="@font/timeburnernormal"
+                                android:gravity="center"
+                                android:text="AOSPEx."
+                                android:textColor="@color/aospextended"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/imageView8"
+                                app:layout_constraintStart_toStartOf="@+id/imageView8"
+                                app:layout_constraintTop_toBottomOf="@+id/imageView8" />
                         </android.support.constraint.ConstraintLayout>
 
                     </android.support.v7.widget.CardView>
@@ -299,45 +408,14 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardNavInv"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
-        android:onClick="openNavInverted"
-        app:cardBackgroundColor="#0C131D"
-        app:cardCornerRadius="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/cardNavPB"
-        app:layout_constraintStart_toEndOf="@+id/cardNavBack">
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/textView42"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/timeburnernormal"
-                android:gravity="center"
-                android:text="Inverted\nThemes"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
         android:id="@+id/cardNavPB"
-        android:layout_width="80dp"
+        android:layout_width="120dp"
         android:layout_height="80dp"
         android:onClick="openNavPureBlack"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/cardNavOthers"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toEndOf="@+id/cardNavBack">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -395,9 +473,10 @@
         android:layout_height="80dp"
         app:cardBackgroundColor="#0C131D"
         app:cardCornerRadius="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardNavInv"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardNavTGX">
+        app:layout_constraintStart_toEndOf="@+id/cardNavTGX"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView5">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
