--- a/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
+++ b/app/src/main/res/layout/fragment_navigation_tgxthemes.xml
@@ -49,6 +49,7 @@
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openInvertedX"
                         app:cardBackgroundColor="@android:color/transparent"
+                        app:cardCornerRadius="12dp"
                         app:cardElevation="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/cardView13"
@@ -104,6 +105,7 @@
                         android:foreground="?android:attr/selectableItemBackground"
                         android:onClick="openJamX"
                         app:cardBackgroundColor="@android:color/transparent"
+                        app:cardCornerRadius="12dp"
                         app:cardElevation="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
